# dra7xx-earlyboot-utils

./: CMakeLists.txt  README.md  manifest.html
inc/: remoteproc.h  rsc_utils.h  ti_fdt_utils.h  utils.h
src/: CMakeLists.txt  check_late_props.c  check_rsc_table_dtb.c  dump_rsc_table.c  print_macros_for_mlo.c  rsc_print_handler.c  rsc_priv.h  rsc_utils.c  rsc_vring_checker.c  ti_fdt_utils.c  utils.c
